@@ -1,3 +1,7 @@
+2005-01-15  Tom Tromey  <tromey@redhat.com>
+
+	* javax/imageo/metadata: Merged from trunk.
+
 2005-01-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/util/Arrays.java:
